load("@bazel-orfs//:openroad.bzl", "orfs_flow")

orfs_flow(
    name = "ethmac_lvt",
    arguments = {
        # Faster builds
        "SKIP_INCREMENTAL_REPAIR": "1",
        "GPL_TIMING_DRIVEN": "0",
        # Various
        "SDC_FILE": "$(location :constraint.sdc)",
        "ABC_AREA": "1",
        "CORE_UTILIZATION": "40",
        "CORE_ASPECT_RATIO": "1",
        "CORE_MARGIN": "2",
        "PLACE_DENSITY": "0.60",
        "ASAP7_USE_VT": "LVT",
        "RECOVER_POWER": "1",
    },
    sources = {
        "SDC_FILE": [":constraint.sdc"],
    },
    top = "ethmac",
    verilog_files = ["//flow/designs/src/ethmac_lvt:verilog"],
)
