load("@bazel-orfs//:sweep.bzl", "orfs_sweep")
load("//util:plot_congestion.bzl", "plot_congestion")

# Format densities, rounding to 2 decimal places.
SWEEPS = {
    "PLACE_DENSITY": [str(0.35 + x * 0.1 + 0.05)[:4] for x in range(4)],
    "CORE_UTILIZATION": [str(40 + x * 50) for x in range(4)],
}

SWEEP = "PLACE_DENSITY"

orfs_sweep(
    name = "gcd",
    arguments = {
        # Faster builds
        "SKIP_INCREMENTAL_REPAIR": "1",
        "GPL_TIMING_DRIVEN": "0",
        "SKIP_LAST_GASP": "1",
        # Various
        "DIE_AREA": "0 0 16.2 16.2",
        "CORE_AREA": "1.08 1.08 15.12 15.12",
        "PLACE_DENSITY": "0.35",
    },
    other_variants = {"base": {}},
    sources = {
        "SDC_FILE": [":constraint.sdc"],
    },
    sweep = {
        value: {
            "arguments": {
                SWEEP: value,
            },
            "previous_stage": {
                "floorplan": "gcd_synth",
            },
        }
        for value in SWEEPS[SWEEP]
    },
    verilog_files = ["//designs/src/gcd:verilog"],
)

plot_congestion(
    name = "plot",
    srcs = [":gcd_{value}_grt".format(value = value) for value in SWEEPS[SWEEP]],
    argument = SWEEP,
    values = SWEEPS[SWEEP],
)
