load("@bazel-orfs//:openroad.bzl", "orfs_flow")

filegroup(
    name = "mock-array-constraints",
    srcs = [
        "constraints.sdc",
    ],
    visibility = [":__subpackages__"],
)

filegroup(
    name = "mock-array-io",
    srcs = [
        "io.tcl",
    ],
    data = [
        "//designs/src/mock-array:util.tcl",
    ],
    visibility = [":__subpackages__"],
)

orfs_flow(
    name = "MockArray",
    arguments = {
        "PLACE_PINS_ARGS": "-annealing",
        "PLACE_DENSITY": "0.30",
        "DIE_AREA": "0 0 358.56 388.8",
        "CORE_AREA": "2.16 2.16 356.40000000000003 386.64000000000004",
        "MACRO_PLACE_HALO": "0 2.16",
        "RTLMP_BOUNDARY_WT": "0",
        "PDN_TCL": "$(PLATFORM_DIR)/openRoad/pdn/BLOCKS_grid_strategy.tcl",
        "MACRO_ROWS_HALO_X": "0.5",
        "MACRO_ROWS_HALO_Y": "0.5",
        "MACRO_BLOCKAGE_HALO": "0",
        "MAX_ROUTING_LAYER": "M9",
        "GDS_ALLOW_EMPTY": "Element",
        "PWR_NETS_VOLTAGES": "",
        "GND_NETS_VOLTAGES": "",
        "IO_PLACER_V": "M5 M7",
        "IO_PLACER_H": "M4 M6",
    },
    macros = ["Element_generate_abstract"],
    sources = {
        "SDC_FILE": [":mock-array-constraints"],
        "IO_CONSTRAINTS": [":mock-array-io"],
    },
    verilog_files = ["//designs/src/mock-array:verilog"],
)

filegroup(
    name = "mock-array-element-io",
    srcs = [
        "Element/io.tcl",
    ],
    data = [
        "//designs/src/mock-array:util.tcl",
    ],
    visibility = [":__subpackages__"],
)

orfs_flow(
    name = "Element",
    abstract_stage = "route",
    arguments = {
        "PLACE_DENSITY": "0.82",
        "MOCK_ARRAY_ROWS": "8",
        "MOCK_ARRAY_COLS": "8",
        "DETAILED_ROUTE_END_ITERATION": "6",
        "MIN_ROUTING_LAYER": "M2",
        "MAX_ROUTING_LAYER": "M5",
        "IO_PLACER_H": "M2 M4",
        "IO_PLACER_V": "M3 M5",
        "PLACE_PINS_ARGS": "-annealing",
        "GND_NETS_VOLTAGES": "",
        "PWR_NETS_VOLTAGES": "",
        "DIE_AREA": "0 0 43.2 43.2",
        "CORE_AREA": "1.08 1.08 42.120000000000005 42.120000000000005",
        "PDN_TCL": "$(PLATFORM_DIR)/openRoad/pdn/BLOCK_grid_strategy.tcl",
    },
    sources = {
        "IO_CONSTRAINTS": [":mock-array-element-io"],
        "SDC_FILE": [":mock-array-constraints"],
    },
    verilog_files = ["//designs/src/mock-array:verilog"],
)
