exports_files(
    glob(["*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "IPs",
    srcs = glob(["*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "verilog",
    srcs = glob(include = ["*.v", "*.sv"], allow_empty = True),
    visibility = ["//visibility:public"],
)
