exports_files(
    glob(["*.v", "*.sv", "*.svh"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "include",
    srcs = glob(include = ["*.v", "*.sv", "*.svh"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "verilog",
    srcs = glob(include = ["*.v", "*.sv"], allow_empty = True),
    visibility = ["//visibility:public"],
)
